# Nemea-Modules

./: Makefile.am  configure.ac
ip_activity/: LICENSE  Makefile.am  README.md  activity_visualisation.py  backend.cpp  backend_functions.cpp  backend_test.sh  backend_tests.sh  frontend.css  frontend.html  frontend.js  http_server.py  install_dependencies.sh  introduction.html  ip_activity.cpp  ip_activity.hpp  server_tests.sh
ip_activity/doc/: fitthesis.cls  literatura.bib  obsah.tex  prilohy.tex  projekt.tex
ip_activity/doc/fig/: drag1.eps  drag2.eps  drag3.eps  drag4.eps  libtrap_communication.eps  main_page_1.eps  monitoring.eps  nemea_arch.eps  padding.eps  selected_area.eps  unirec.eps
ip_activity/tests/: README.md  backend_tests.sh  bitmap_reader.py  bitmap_tests.sh  bitmap_writer.cpp  config_reader.py  config_tests.sh  config_writer.cpp  run_tests.sh  server_tests.sh
